# ditchcarbon

./: README.md  main.py  pyproject.toml  setup.py
src/DitchCarbon/: main.py
src/ditchcarbon/: __init__.py  ditchcarbon.py
